Add test controller that pulls example data from SQLLite database
